@startuml
left to right direction
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam roundcorner 15

class User {
    email: String
    role: String
}

class JournalEntry {
    surfaceText: Text
    innerReactionText: Text
    meaningText: Text
    entryIndex: Int
}

class ValueGraph {
    nodes: JSON
    edges: JSON
}

class SeedInsight {
    mirror: Text
    reframe: Text
    relief: Text
}

class Analyze {
    maslowLevels: String[]
    plutchikEmotion: String
    hawkinsLevel: Float
}

class DeepInsight {
    insightText: Text
    generatedAt: DateTime
}

User "1" -- "0..*" JournalEntry
User "1" -- "1" ValueGraph

JournalEntry "1" --> "1" SeedInsight
JournalEntry "1" --> "1" Analyze

ValueGraph --> DeepInsight
Analyze --> ValueGraph
@enduml